--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,7 @@
   publish = "build/"
 
   # Default build command.
-  command = "npm run build"
+  command = "react-scripts build"
 
 [build.environment]
   REACT_APP_API_BASE_URL = "https://reactjs-scheduler-lhl.herokuapp.com/"
